tests/src/test/resources/scala/tools/nsc/effects/io/PatMatSuite-files/patMatNeg.check
newSource:9: error: effect type mismatch;
 found   : @io
 required: @noIo
    case One(x) if {println(); x == 10} => x
                           ^
newSource:14: error: effect type mismatch;
 found   : @io
 required: @noIo
    case Even() => x / 2
             ^
